# TDD

./: CMakeLists.txt  Dollar.h  test.cpp  test_money.cpp
TDDメモ/: 0.事前準備.md  1.TDDとは.md  2.副作用.md  3.等値比較.md  4.三角測量.md
TDDメモ/テキストファイル/: 0.事前準備.txt  1.TDDとは.txt  2.リファクタリング.txt  2.副作用.txt  3.等値比較.txt  4.三角測量.txt
